# semantic-model-generator

./: app.py  environment.yml  pyproject.toml  pyproject.toml.  requirements.txt
app_utils/: shared_utils.py
