[project]
name = "semantic-model-generator-app"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
  "streamlit>=1.50.0",
  "streamlit-extras==0.4.0",
  "pandas>=2.0.1",                 # <-- required for fetch_pandas_all()
  "numpy>=1.26.4",
  "pyarrow==14.0.2",
  "protobuf==5.26.1",
  "pydantic==2.8.2",
  "PyYAML>=6.0.1",
  "ruamel.yaml==0.17.21",
  "strictyaml>=1.7.3",
  "sqlglot==25.10.0",
  "tqdm>=4.66.5",
  "loguru>=0.7.2",
  "python-dotenv>=1.0.1",
  "urllib3>=1.26.19",
  "requests>=2.32.3",
  "snowflake-snowpark-python==1.18.0",
  "snowflake-connector-python[secure-local-storage,pandas]>=3.11.0"  # <-- install extra
]
